Fix header alignment

--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
     background-image: linear-gradient(180deg, rgba(0,0,0,0.70) 0%, rgba(0,0,0,0) 50%), url("./images/costa-header-bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    /* background: linear-gradient(180deg, rgba(122,122,122,1) 0%, rgba(135,245,255,1) 100%); */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .banner-container {
@@ -22,6 +24,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 34px;
+    max-width: 1392px;
 }
 
 .banner-logo-container {
@@ -57,13 +61,14 @@
 
 .hero-section{
     border: 5px solid greenyellow;
-    width: 566px;
-    margin: 120px;
+    width: 100%;
 }
 
 h1 {
     font-size: 70px;
     font-weight: normal;
     text-align: center;
+    width: 566px;
+    margin: 120px;
 }
 
